concord_macros/tests/dsl/fail/fail_vars_in_pagination_expr.stderr
error: generated implementation local `vars` is not part of the public DSL expression scope
  --> tests/dsl/fail/fail_vars_in_pagination_expr.rs:16:32
   |
16 |         cursor = format!("{}", vars.cursor)
   |                                ^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_vars_in_pagination_expr.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
